--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,6 +1,6 @@
 <div class="topbar" id="topbar">
-  <a id="home_link" class="bar__link agent-3" href="/">Accueil</a>
-  <a id="recipes_index_link" class="bar__link agent-3" href="/recipes">Recettes</a>
+  <a id="home_link" class="link link--black link--after-anim agent-3" href="/">Accueil</a>
+  <a id="recipes_index_link" class="link link--black link--after-anim agent-3" href="/recipes">Recettes</a>
   <% unless request.path == '/' %>
     <form novalidate="novalidate" onsubmit="return searchQuery()" class="searchbox_top agent-3">
       <div role="search" class="search">
