--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -10,36 +10,9 @@
   top: 0;
   background-color: $color-white;
 
-  .bar__link {
-    color: $color-black;
-    font-size: 2.4rem;
-
+  .link {
     &:not(:first-child){
       margin-left: 5%;
-    }
-
-    &:after {
-      content: '';
-      display: block;
-      height: 2px;
-      background: black;
-      width: 0;
-    }
-
-    &.active:after {
-      width: 100%;
-    }
-
-    &:hover, &:focus {
-      text-decoration: none;
-    }
-
-    &:not(.active):hover:after,
-    &:not(.active):focus:after {
-      width: 100%;
-      transform: scaleX(0);
-      transform-origin: right;
-      animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s forwards;
     }
   }
 
