--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -1,5 +1,5 @@
 <div class="bottombar" id="bottombar">
-  <a id="bottom_recipes_index_link" class="bar__link" href="/recipes">Recettes</a>
+  <a id="bottom_recipes_index_link" class="link link--white" href="/recipes">Recettes</a>
 
   <% unless request.path == '/' %>
     <form novalidate="novalidate" onsubmit="return bottomSearchQuery()" class="searchbox_bottom">
