--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -105,9 +105,7 @@
       .recipe__card {
         background-color: $color-white;
         width: 28rem;
-        height: 27rem;
         flex: 0 0 auto;
-        cursor: pointer;
         display: flex;
         align-items: flex-end;
         padding-bottom: .5rem;
@@ -115,20 +113,24 @@
 
         .recipe__link {
           text-decoration: none;
+          cursor: pointer;
           width: 100%;
           transition: all .3s ease;
           margin: 0 .5rem;
 
-          &:hover {
-            transform: translateY(-4px) translateX(-4px);
-            .recipe__image {
-              box-shadow: 4px 4px $color-black;
+          @media screen and (min-width: $screen-m) {
+            &:hover {
+              transform: translateY(-4px) translateX(-4px);
+              .recipe__image {
+                box-shadow: 4px 4px $color-black;
+              }
             }
-          }
-          &:active {
-            transform: translateY(0px) translateX(0px);
-            .recipe__image {
-              box-shadow: 0px 0px $color-black;
+
+            &:active {
+              transform: translateY(0px) translateX(0px);
+              .recipe__image {
+                box-shadow: 0px 0px $color-black;
+              }
             }
           }
         }
@@ -148,6 +150,9 @@
           width: 100%;
           height: 18rem;
           transition: all .3s ease;
+          @media screen and (max-width: $screen-s) {
+            box-shadow: 4px 4px $color-black;
+          }
         }
 
         .recipe__info {
