add search filters in landing

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,7 +1,7 @@
 // Import Google fonts
 
 // Define fonts for body and headers
-$body-font: "Arial", "sans-serif";
+$body-font: "Helvetica Neue", "Helvetica", "sans-serif";
 $headers-font: "Helvetica Neue", "Helvetica", "sans-serif";
 
 // Set all fonts to 16px;
