--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,6 +29,7 @@
     width: 100%;
     padding: 0 .5rem;
     margin-top: 10rem;
+    margin-bottom: 5rem;
 
     .search__form {
       display: flex;
@@ -92,7 +93,7 @@
         background-color: $color-white;
         border: none;
         flex-shrink: 0;
-        margin: .5rem 2rem;
+        margin: .5rem 1rem;
         color: $color-grey-dark;
 
         &:focus {
@@ -228,6 +229,7 @@
 
     .search {
       margin-top: 5rem;
+      margin-bottom: 5rem;
 
       .search__form {
         padding: .5rem .5rem;
