right to left after direction

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -88,11 +88,11 @@
       flex-wrap: wrap;
       margin-bottom: 2rem;
 
-      .filter {
+      .filter__button {
+        position: relative;
         font-size: 2rem;
         background-color: $color-white;
         border: none;
-        flex-shrink: 0;
         margin: .5rem 1rem;
         color: $color-grey-dark;
 
@@ -103,9 +103,11 @@
         &:after {
           content: '';
           display: block;
+          position: absolute;
+          right: 0;
+          width: 0;
           height: 2px;
           background-color: $color-black;
-          width: 0;
           transition: width .4s ease;
         }
 
