--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -107,12 +107,12 @@
 
       &--left {
         justify-content: flex-start;
-        h3 { text-align: left; margin-right: 1rem; flex: 0 0 10%; }
+        h3 { margin-right: 1rem; flex: 0 0 10%; }
       }
 
       &--right {
         justify-content: flex-end;
-        h3 { text-align: right; margin-left: 1rem; flex: 0 0 10%; }
+        h3 { margin-left: 1rem; flex: 0 0 10%; }
       }
     }
   }
@@ -122,7 +122,7 @@
       width: 2rem;
       height: 1px;
       background-color: $color-black;
-      margin: 4rem auto;
+      margin: 3rem auto;
     }
   }
 
